--- a/src/stories/table.css
+++ b/src/stories/table.css
@@ -49,7 +49,7 @@
 }
 
 .oai-table tbody tr:hover td {
-  background-color: var(--color-neutral-100);
+  background-color: var(--color-bg-hover);
 }
 
 .oai-table__checkbox {
